--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-  <title>Admin Dashboard</title>
-  <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+  <title> Dashboard</title>
+  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.svg" /> -->
   <!-- Meta Tags-->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#2296f3" />
-  <meta name="title" content=" Admin Dashboard " />
+  <meta name="title" content=" Dashboard " />
   <meta name="author" content="CodedThemes" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
@@ -22,16 +22,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-          This HTML file is a template.
-          If you open it directly in the browser, you will see an empty page.
 
-          You can add webfonts, meta tags, or analytics to this file.
-          The build step will place the bundled scripts into the <body> tag.
-
-          To begin the development, run `npm start` or `yarn start`.
-          To create a production bundle, use `npm run build` or `yarn build`.
-   -->
 </body>
 
 </html>
